Fix notification z-index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -164,6 +164,7 @@ input[type="checkbox"]{
 	margin: 0;
 	-webkit-animation: animScale 0.4s;
 	animation: animScale 0.4s;
+	z-index: 1;
 }
 
 @-webkit-keyframes animScale {
